<resources>

    <!-- App Defaults -->
    <string name="company_name">Superior Janitorial Systems</string>
    <string name="app_name">Superior Connect</string>

    <!-- Nav Bar Strings-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Connect</string>
    <string name="title_notifications">Information</string>

    <!-- Main Fragment Strings-->
    <string name="main_fragment_title_welcome_card">Connect with us</string>
    <string name="main_fragment_text_welcome_card">At Superior Janitorial Systems we pride ourselves on being the most connected janitorial service in the bay area.  You can send us a message 24/7.  This app helps make that happen.
    Tap "Using the app" to see how it works.</string>

    <string name="main_fragment_title_howto_card">Using the App</string>
    <string name="main_fragment_text_howto_card">This app is used for our clients to connect with us on the go. Simply tap the connect button at the bottom and then select what type of message you want to send.
    Not a client yet? Just tap the Request Estimate card. Need to leave us a note? Tap the Leave a Note for Janitors card.  Its that easy!</string>

    <string name="main_fragment_title_about_us_card">Who we are</string>
    <string name="main_fragment_text_about_us_card">Superior Janitorial Systems is a commercial cleaning service located near the South Bay Area in San Jose, CA.</string>

    <!-- Connect Fragment Strings -->
    <string name="connect_fragment_button_leave_note">Leave a Note for Janitors</string>
    <string name="connect_fragment_button_leave_note_restrictions">Some limitations apply.</string>

    <string name="connect_fragment_button_estimate_request">Request Estimate</string>
    <string name="connect_fragment_button_estimate_request_subtext">Select the services that are right for you!</string>

    <string name="connect_fragment_button_e_waste_request">E-Waste Removal Request</string>
    <string name="connect_fragment_button_e_waste_request_restrictions">Some limitations apply.</string>

    <string name="connect_fragment_button_call_us">Call Superior Janitorial</string>

    <!-- Info Fragment Strings -->
    <string name="info_fragment_address">Superior Janitorial Systems\n4858 Tilden Dr.\nSan Jose, CA 95124\n(408)377\u20148720\ninfo@superiorjanitorialsystems.com</string>

    <!-- Message Form Strings-->
    <string name="form_label_contactRequested">Contact requested immediately</string>
    <string name="form_hint_name">Name (Required)</string>
    <string name="form_hint_officeName">Office Name (Required)</string>
    <string name="form_hint_email">Email (Required)</string>
    <string name="form_hint_phone">Phone (Required)</string>
    <string name="form_hint_fax">FAX</string>
    <string name="form_hint_message_note">Your Message: (Required)</string>
    <string name="form_hint_message_ewaste">Description of Waste: (Required)</string>
    <string name="form_hint_message_estimate">Description of office and size in SQFT. (Required)</string>
    <string name="form_label_submitButton">Submit</string>

    <!-- Note Fragment Strings-->
    <string name="note_fragment_text_title">Leave the Janitors a Note</string>
    <string name="note_fragment_text_rules">1. Please Let us know the second that something is wrong.\n2. Please be specific.\n3.  Please read our policy page.\n4. All Notes must be submitted before 3:00pm for same day service.\n5. Remember to LABEL your TRASH that is not in a trash can.\n</string>
    <string name="note_fragment_text_notice">Notice:</string>
    <string name="note_fragment_text_policy_link">Policy Page Link</string>

    <!-- Ewaste Fragment Strings-->
    <string name="ewaste_fragment_text_title">Request E-Waste Removal</string>
    <string name="ewaste_fragment_text_restrictions">Restrictions:</string>
    <string name="ewaste_fragment_text_rules">1. You must make your request 24 hours in advance.\n2. Larger items like free standing copiers require an appointment.\n3. All items must be labeled E-Waste.\n4. We do not take larger items like refrigerators\n\n
    We do not take: CFLs, Fluorescent tubes, Non-prescription or prescription drugs and Hazardous Waste.\n\nWe do take: All office electronics, home electronics, anything computer related, small kitchen appliances, batteries.</string>

    <!-- Estimate Fragment Strings-->
    <string name="estimate_fragment_text_title">Request an Estimate</string>
    <string name="estimate_fragment_text_welcome">Welcome to Superior Janitorial Systems !</string>
    <string name="estimate_fragment_text_description">\nPlease fill out the form below to schedule you free estimate.\n\nWe will contact you promptly to confirm the date and time of your walk through.\n</string>

    <!-- A11y Strings -->
    <string name="welcome_card_description">Welcome. Bay area panorama.</string>
    <string name="howto_card_description">How to use app. Typewriter.</string>
    <string name="aboutus_card_description">Contact Information. Feet graphic.</string>

    <string name="note_icon_description">Note icon.</string>
    <string name="ewaste_icon_description">Eee Waste icon.</string>
    <string name="estimate_icon_description">Estimate icon.</string>
    <string name="call_icon_description">Call icon.</string>

    <string name="contact_card_description">Contact us. Telephone.</string>

    <!-- Permission Strings -->
    <string name="permission_phone_rationale">Access to the Phone is need to call Superior Janitorial.</string>
    <string name="permission_ok">OK</string>


    </resources>
