<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ewasteFormLayout"
        tools:context=".EwasteFragment">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="?attr/actionBarSize"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/contact_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/layout_min_grid_spacing"
                android:text="@string/ewaste_fragment_text_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ewaste_fragment_text_restrictions"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/ewaste_fragment_text_rules"/>


            <CheckBox
                android:id="@+id/contact_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_spacing"
                android:text="@string/form_label_contactRequested"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_spacing"
                android:hint="@string/form_hint_name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/office_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_spacing"
                android:hint="@string/form_hint_officeName"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_spacing"
                android:hint="@string/form_hint_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_spacing"
                android:hint="@string/form_hint_phone"
                android:inputType="phone"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_spacing"
                android:hint="@string/form_hint_fax"
                android:inputType="phone"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_message_height"
                android:layout_marginBottom="@dimen/layout_vertical_spacing"
                android:gravity="top"
                android:hint="@string/form_hint_message_ewaste"
                android:fitsSystemWindows="true"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:padding="@dimen/layout_min_grid_spacing"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="@dimen/form_submit_button_padding"
                android:paddingRight="@dimen/form_submit_button_padding"
                android:text="@string/form_label_submitButton"
                android:textColor="@color/primaryWhite"
                />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>