<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_horizontal_margin">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainScreenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainFragment">


        <android.support.v7.widget.CardView
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardviewWelcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:id="@+id/welcomeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/sj_skyline"
                    android:scaleType="centerCrop"/>

                <TextClock
                    android:id="@+id/textClock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/main_fragment_title_welcome_card"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/cardviewWelcomeDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/main_fragment_text_welcome_card"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:visibility="gone"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardviewHowto"
            app:layout_constraintTop_toBottomOf="@id/cardviewWelcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:id="@+id/howToContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/typewriter"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/main_fragment_title_howto_card"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

                <TextView
                    android:id="@+id/cardviewHowtoDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/main_fragment_text_howto_card"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:visibility="gone"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardviewAbout"
            app:layout_constraintTop_toBottomOf="@id/cardviewHowto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:id="@+id/aboutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/shoes"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/main_fragment_title_about_us_card"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

                <TextView
                    android:id="@+id/cardviewAboutDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/main_fragment_text_about_us_card"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:visibility="gone"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>

</ScrollView>