<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NoteFragment">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/contact_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/note_fragment_text_title"
                android:textSize="25sp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_fragment_text_notice"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_fragment_text_rules"/>
            <TextView
                android:id="@+id/policy_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/note_fragment_text_policy_link"/>

            <CheckBox
                android:id="@+id/contact_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Contact requested immediately"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Name (Required)"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/office_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Office Name (Required)"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="Email (Required)"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Phone (Required)"
                android:inputType="phone"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="FAX"
                android:inputType="phone"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="Your Message (Required)"
                android:fitsSystemWindows="true"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:padding="5dp"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="Submit"
                android:textColor="#fff"
                android:layout_marginBottom="56dp"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>